# totton_audio_project

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  INSTALL.md  LICENSE  LICENSE.ja.md  NOTICE.md  PULL_REQUEST_TEMPLATE.md  README.md  REVIEWER_RESPONSE.md  REVIEW_FEEDBACK.md  SELF_REVIEW.md  THIRD_PARTY_LICENSES.md  aqua.yaml  config.json  nodesource_setup.sh  pyproject.toml
.claude/: settings.json
.claude/skills/: api-doc-sync.md  build-and-test.md  filter-generation-batch.md  web-component-scaffold.md  worktree-pr-workflow.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  support.yml
.github/workflows/: ci.yml  openapi-check.yml  openapi-release-assets.yml  openapi-sync-public.yml  private-release-build-ghcr.yml  public-export-sync-public.yml  public-release-mirror.yml  sync-web-brand.yml  uiux-sync-public.yml  vulkan-compile.yml
config_samples/delimiter/: delimiter_44k.json  delimiter_48k_resample.json
data/EQ/: Flat_-8.6dB.txt  KB5000_7_any_frequency.txt  Sample_EQ.txt  opra_akg:k701::autoeq_oratory1990_kb5000_7.txt  opra_sennheiser:hd_800_s::autoeq_oratory1990_kb5000_7.txt  opra_sennheiser:hd_800_s::oratory1990_harman_target_dekoni_fenestrated_sheepskin_earpads.txt  opra_sony:mdr_cd2000::autoeq_crinacle.txt  opra_sony:mdr_cd2000::autoeq_crinacle_kb5000_7.txt  opra_sony:mdr_z1r::oratory1990_harman_target.txt  (+1 more)
docker/: Dockerfile.jetson  Dockerfile.rtp-sender  README.evaluator.md  README.local_build.md  README.md  README.rtp-sender.md  docker-compose.jetson.yml  docker-compose.local.yml  docker-compose.raspi-sender.yml  docker-compose.yml  entrypoint.sh
docs/: bypass_attempt_log.md  code_audit_jetson_orin.md  first.txt  parametric_eq_plan.md  phase2_optimization_report.md  phase3_week1_progress_report.md  phase3_week2_day2_samplerate_analysis.md  repo_hygiene.md  roadmap.md  web_control_plan.md
include/: audio_io.h  audio_ring_buffer.h  audio_utils.h  base64.h  config_loader.h  convolution_engine.h  crossfeed_engine.h  dac_capability.h  daemon_constants.h  eq_parser.h  eq_to_fir.h  error_codes.h  fallback_manager.h  filter_headroom.h  filter_metadata.h  graceful_shutdown.h  partition_runtime_utils.h  phase_alignment.h  playback_buffer.h  rtp_session_manager.h  soft_mute.h  zeromq_interface.h
jetson_pcm_receiver/: .gitignore  CMakeLists.txt  README.md
jetson_pcm_receiver/include/: alsa_playback.h  app_options.h  connection_mode.h  output_device.h  pcm_header.h  pcm_stream_handler.h  status_server.h  status_tracker.h  tcp_server.h  xrun_detector.h  zmq_status_server.h
jetson_pcm_receiver/src/: alsa_playback.cpp  app_options.cpp  logging.cpp  main.cpp  output_device.cpp  pcm_header.cpp  pcm_stream_handler.cpp  status_server.cpp  status_tracker.cpp  tcp_server.cpp  xrun_detector.cpp  zmq_status_server.cpp
jetson_pcm_receiver/tests/: test_alsa_playback.cpp  test_app_options.cpp  test_output_device.cpp  test_pcm_header.cpp  test_pcm_stream_handler.cpp  test_tcp_server.cpp  test_xrun_detector.cpp  test_zmq_status_server.cpp
plots/: delimiter_comparison_mix_for_NORI.json  delimiter_comparison_nori.json
raspberry_pi/: .env  CMakeLists.txt  Dockerfile  README.md  __init__.py  control_api.py  docker-compose.raspberry_pi.runtime.yml  docker-compose.yml  rtp_sender.py
raspberry_pi/control_api/: Dockerfile
raspberry_pi/docker/: entrypoint.sh
raspberry_pi/docker/nginx/: default.conf.template
raspberry_pi/include/: AlsaCapture.h  HwParamsMonitor.h  Options.h  PcmHeader.h  RtpOptions.h  RtpPipelineBuilder.h  TcpClient.h  logging.h
raspberry_pi/rtp_receiver/: __init__.py  service.py  zmq_bridge.py
raspberry_pi/src/: AlsaCapture.cpp  CMakeLists.txt  HwParamsMonitor.cpp  Options.cpp  RtpOptions.cpp  RtpPipelineBuilder.cpp  TcpClient.cpp  logging.cpp  main.cpp  rtp_main.cpp
raspberry_pi/tests/: conftest.py  test_alsa_capture.cpp  test_cli_options.cpp  test_control_api_bind.py  test_control_api_imports.py  test_hw_params_monitor.cpp  test_logging.cpp  test_rtp_options.cpp  test_rtp_pipeline_builder.cpp  test_rtp_sender.py  test_status_report_default.py  test_tcp_client.cpp
raspberry_pi/usb_i2s_bridge/: Dockerfile  __init__.py  __main__.py  bridge.py  control_agent.py  control_plane.py  docker-compose.yml  usb-i2s-bridge.env
raspberry_pi/usb_i2s_bridge/docker/: entrypoint.sh
samples/vkfft_minimal/: CMakeLists.txt  vkfft_minimal.cpp
samples/vkfft_overlap_save/: CMakeLists.txt  vulkan_overlap_save.cpp  vulkan_overlap_save.h  vulkan_overlap_save_tests.cpp  vulkan_overlap_save_tool.cpp
scripts/: __init__.py  analyze_waveform.py  beta_sweep.py  check_headroom.py  daemon.sh  export_openapi.py  fetch_hutubs.py  generate_filter.py  generate_hrtf.py  generate_linear_phase.py  generate_minimum_phase.py  generate_mixed_phase.py  generate_phase_comparison_plots.py  generate_test_audio.py  inspect_impulse.py  modern_target.py  opra.py  partition_analysis.py  plot_eq_response.py  plot_test_results.py  restart_alsa_daemon.sh  restart_daemon.sh  rtp_sender.py  run_tests.sh  setup-system.sh  setup_pw_links.sh  setup_snd_aloop.sh  test_eq_effect.py  verify_frequency_response.py  watch_buffer.py  watch_clip_rate.py
src/: alsa_daemon.cpp  audio_io.cpp  auto_negotiation.cpp  base64.cpp  config_loader.cpp  convolution_engine.cu  dac_capability.cpp  delimiter_wav_to_wav.cpp  eq_parser.cpp  eq_to_fir.cpp  error_codes.cpp  fallback_manager.cpp  filter_headroom.cpp  graceful_shutdown.cpp  main.cpp  partition_runtime_utils.cpp  phase_alignment.cpp  pipewire_daemon.cpp  rtp_session_manager.cpp  soft_mute.cpp  test_eq.cpp  zeromq_interface.cpp
systemd/: gpu-upsampler.service.in  gpu-upsampler@.service
test_output/: spectrum_difference.csv  spectrum_no_eq.csv  spectrum_with_eq.csv
tmp/: issue_low_latency_core.md
web/: __init__.py  constants.py  error_codes.py  exceptions.py  i18n.py  main.py  models.py  security.py
web_brand/: README.md  index.html
(+572 files in other folders)
